# Codeius-CodingAgent

./: .gitignore  README.md  pyproject.toml  settings.json
.claude/: settings.local.json
Codeius-GUI/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
Codeius-GUI/src/: App.css  App.jsx  index.css  main.jsx
Codeius-GUI/src/components/: InputField.jsx  Navbar.jsx
Codeius-GUI/src/components/ChatBubble/: ChatBubble.css  ChatBubble.jsx
Codeius-GUI/src/components/CollaboratorList/: CollaboratorList.css  CollaboratorList.jsx
Codeius-GUI/src/components/HistoryIcon/: HistoryIcon.css
Codeius-GUI/src/components/HistoryModal/: HistoryModal.css  HistoryModal.jsx
Codeius-GUI/src/components/InputField/: InputField.css  InputField.jsx
Codeius-GUI/src/components/Navbar/: Navbar.css  Navbar.jsx
Codeius-GUI/src/components/Settings/: Settings.css  Settings.jsx
Codeius-GUI/src/services/: api.js  socket.js
history/: conversation_20251127_075841_142417.txt  conversation_20251127_124037_113908.txt
src/codeius/: cli.py
src/codeius/api/: server.py
src/codeius/core/: agent.py  conversation_db.py  model_manager.py
src/coding_agent/: __init__.py  action_executor.py  action_handlers.py  agent.py  ai_ml_template.py  cli.py  fastapi_template.py  file_ops.py  nodejs_template.py  performance.py  plugin_manager.py  react_template.py
src/coding_agent/history/: conversation_20251112_113043_748718.txt
src/coding_agent/provider/: google.py  groq.py  mcp.py  multiprovider.py  tavily.py
tests/: test_agent.py  test_double_ctrlc.py
(+2 files in other folders)
