[project]
name = "codeius"
version = "1.0.0"
description = "AI-powered coding assistant with multiple tools and visual interface"
readme = "README.md"
authors = [
    { name = "MuhammadUsmanGM", email = "MuhammadUsmanGM@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "gitpython>=3.1.45",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "pyfiglet>=1.0.0",
    "pydantic>=2.12.4",
    "flask>=3.1.2",
    "pytest>=9.0.0",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "radon>=6.0.1",
    "flake8>=7.3.0",
]

[project.scripts]
codeius = "coding_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_agent"]
